Fixed spacing and pseudo styling

--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@
   border-radius: 3px;
 }
 
-::placeholder {
+.searchBar::placeholder {
   font-family: "Avenir", sans-serif;
   color: #3d4e61;
   line-height: 22px;
